Add user CRUD (#4)
* Clean up api

* Add user with Create

* Add user CRUD

* Add trgm indices to users table

* Use user service in POST /users/

* Remove user ID from OpenAPI

* Add missing 422 to POST /users/

* Add user CRUD to OpenAPI

* Fix filter parameter type in OpenAPI

* Add GetUsers base

* Fix select in user query builder

* Add debug logs

* Add query parameter validation to GetUsers

* Add ErrNotFound returns to user

* Implement GetUsersPassportNumber

* Implement

* Add UserUpdate to OpenAPI

* Implement PatchUsersPassportNumber

* Organize
