# api/timetrack/v1/openapi.yaml
@@ -41,6 +41,176 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "422":
+          description: Unprocessable entity.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+    get:
+      security:
+          - bearerAuth: []
+      parameters:
+        - in: query
+          name: filter
+          schema:
+            type: array
+            items:
+              type: string
+          required: false
+          description: Filter by user fields. Can be used multiple times.
+          examples:
+            example2:
+              value: "name=Ivan"
+            example1:
+              value: "surname=Ivanov"
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+          required: false
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            minimum: 0
+          required: false
+      responses:
+        "200":
+          description: OK.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: Unprocessable entity.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /users/{passportNumber}:
+    get:
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: passportNumber
+          schema:
+            type: string
+          required: true
+      responses:
+        "200":
+          description: OK.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: Not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: Unprocessable entity.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+    patch:
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: passportNumber
+          schema:
+            type: string
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserUpdate"
+      responses:
+        "200":
+          description: OK.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        "401":
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "404":
+          description: Not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "422":
+          description: Unprocessable entity.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+    delete:
+        security:
+          - bearerAuth: []
+        parameters:
+          - in: path
+            name: passportNumber
+            schema:
+              type: string
+            required: true
+        responses:
+          "200":
+            description: OK.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/User"
+          "401":
+            description: Unauthorized.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+          "404":
+            description: Not found.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+          "422":
+            description: Unprocessable entity.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+
 
   /users/current:
     get:
@@ -84,10 +254,8 @@ components:
 
     User:
       type: object
-      required: [id, passportNumber, surname, name, address]
+      required: [passportNumber, surname, name, address]
       properties:
-        id:
-          type: integer
         passportNumber:
           type: string
         surname:
@@ -105,3 +273,15 @@ components:
       properties:
         passportNumber:
           type: string
+
+    UserUpdate:
+        type: object
+        properties:
+          surname:
+            type: string
+          name:
+            type: string
+          patronymic:
+            type: string
+          address:
+            type: string
